fixed header layout on smaller height screens

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -12,7 +12,7 @@
 }
 
 header{
-  height: 8vh;
+  height: 60px;
   background-color: rgb(59, 59, 59);
   
 }
